base/infrastructure/tailscale/egress/m/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: m-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`m.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: m-egress
          port: 7878
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: m-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`m.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: m-egress
          port: 7878
  tls:
    secretName: m-tls
